#9573 [ITSM] view 공통 mixin 생성 : 사용되지 않는 변수 정리

--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -260,7 +260,7 @@
   .statistic {
     &-box {
       width: 23.75rem; // 380px
-      border: $token-dashbaord-border;
+      border: 0.0625rem solid $line-gray;
       border-radius: 0.3125rem; // 5px
       padding: 1.5625rem; // 25px
     }
