#9573 [ITSM] view 공통 mixin 생성 : 사용되지 않는 mixin 정리

--- a/src/main/resources/public/src/scss/theme/default/_avatar.scss
+++ b/src/main/resources/public/src/scss/theme/default/_avatar.scss
@@ -1,7 +1,8 @@
 @import '../../template/_avatar.scss';
 
 .avatar {
-    @include h5();
+    font-size: 1rem; // 16px
+    font-weight: $font-weight-regular;
     color: $gray;
     &-text {
       text-align: center;
