#9686 [단위 테스트 - 프로세스] 프로세스 가져오기 모달창 관련, 버튼 명 수정

--- a/src/main/resources/public/template/form/formSearch.html
+++ b/src/main/resources/public/template/form/formSearch.html
@@ -341,7 +341,7 @@
                 classes: 'form-import',
                 buttons: [
                     {
-                        content: i18n.msg('common.btn.check'),
+                        content: i18n.msg('form.btn.import'),
                         classes: "default-line",
                         bindKey: false,
                         callback: function(modal) {
