--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -337,7 +337,7 @@
                 classes: 'process-import',
                 buttons: [
                     {
-                        content: i18n.msg('common.btn.check'),
+                        content: i18n.msg('process.btn.import'),
                         classes: "default-line",
                         bindKey: false,
                         callback: function(modal) {
