#9181 화면에 링크가 걸린 부분은 티 좀 나게 하자. 일감 수정 진행

--- a/src/main/resources/public/src/scss/portal/_variables.scss
+++ b/src/main/resources/public/src/scss/portal/_variables.scss
@@ -76,6 +76,7 @@ $table-th-font-color:                        $light-black;
 $table-td-font-size:                         1rem; // 16px
 $table-td-font-weight:                       $font-weight-regular;
 $table-td-font-color:                        $dark-gray;
+$table-a-hover-font-color:                   $point-blue;
 $table-row-hover-bg-color:                   rgba(230, 232, 235, 0.6);
 
 // 데이터 없을때
