--- a/src/main/resources/public/src/scss/portal/_elements.scss
+++ b/src/main/resources/public/src/scss/portal/_elements.scss
@@ -61,7 +61,14 @@ table {
           padding-left: 1.25rem; // 20px
         }
 
-        a { color: $table-td-font-color; }
+        a {
+          color: $table-td-font-color;
+          text-decoration: underline !important;
+          text-underline-position: under;
+          &:hover {
+            color: $table-a-hover-font-color;
+          }
+        }
       }
       &.no-data-found-list {
         background-color: $no-data-found-bg-color;
