--- a/src/main/resources/public/src/scss/portal/_layout.scss
+++ b/src/main/resources/public/src/scss/portal/_layout.scss
@@ -112,7 +112,14 @@
                 vertical-align: middle;
                 &:hover { background-color: rgba(230, 232, 235, 0.6); }
   
-                a { color: $dark-gray; }
+                a {
+                  color: $dark-gray;
+                  text-decoration: underline;
+                  text-underline-position: under;
+                  &:hover {
+                    color: $point-blue;
+                  }
+                }
               }
             }
           }
