#9181 화면에 링크가 걸린 부분은 티 좀 나게 하자. 일감 수정 진행

--- a/src/main/resources/public/src/scss/portal/_elements.scss
+++ b/src/main/resources/public/src/scss/portal/_elements.scss
@@ -61,14 +61,7 @@ table {
           padding-left: 1.25rem; // 20px
         }
 
-        a {
-          color: $table-td-font-color;
-          text-decoration: underline !important;
-          text-underline-position: under;
-          &:hover {
-            color: $table-a-hover-font-color;
-          }
-        }
+        a { color: $table-td-font-color; }
       }
       &.no-data-found-list {
         background-color: $no-data-found-bg-color;
