--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -179,7 +179,7 @@
             tdBoardCategoryName.innerText = data.boardCategoryName;
 
             let tdBoardTitle = document.createElement('td');
-            tdBoardTitle.className = 'align-left';
+            tdBoardTitle.className = 'align-left underline';
             tdBoardTitle.style.width = '30%';
             let aBoardTitle = document.createElement('a');
             aBoardTitle.href = '/boards/articles/'+ data.boardId +'/view';
