--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -131,7 +131,7 @@
 
             let tdBoardAdminTitle = document.createElement('td');
             tdBoardAdminTitle.style.width = '65%';
-            tdBoardAdminTitle.className = 'align-left';
+            tdBoardAdminTitle.className = 'align-left underline';
             let aBoardAdminTitle = document.createElement('a');
             if (document.getElementsByName('isRole')[0].value === 'true') {
                 aBoardAdminTitle.href = '/boards/'+ data.boardAdminId +'/edit';
