--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -127,7 +127,7 @@
 
             let tdCustomCodeName = document.createElement('td');
             tdCustomCodeName.style.width = '50%';
-            tdCustomCodeName.className = 'align-left';
+            tdCustomCodeName.className = 'align-left underline';
             let aCustomCodeName = document.createElement('a');
             if (document.getElementsByName('isRole')[0].value === 'true') {
                 aCustomCodeName.href = '/custom-codes/'+ data.customCodeId +'/edit';
