--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -173,7 +173,7 @@
             tdDownloadCategory.innerText = i18n.msg(data.downloadCategory);
 
             let tdDownloadTitle = document.createElement('td');
-            tdDownloadTitle.className = 'align-left';
+            tdDownloadTitle.className = 'align-left underline';
             tdDownloadTitle.style.width = '45%';
             let aDownloadTitle = document.createElement('a');
             if (document.getElementsByName('isRole')[0].value === 'true') {
