--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -124,7 +124,7 @@
             tdFaqId.innerText = i18n.msg('common.code.'+data.faqGroup);
 
             let tdFaqTitle = document.createElement('td');
-            tdFaqTitle.className = 'align-left';
+            tdFaqTitle.className = 'align-left underline';
             tdFaqTitle.style.width = '80%';
             let aFaqTitle = document.createElement('a');
             if (document.getElementsByName('isRole').value === 'true') {
