--- a/src/main/resources/public/template/form/formSearch.html
+++ b/src/main/resources/public/template/form/formSearch.html
@@ -441,7 +441,7 @@
 
             let tdFormName = document.createElement('td');
             tdFormName.style.width = '20%';
-            tdFormName.className = 'align-left';
+            tdFormName.className = 'align-left underline';
             let formNameObject;
             if (data.editable == true) {
                 formNameObject = document.createElement('a');
