--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -185,7 +185,7 @@
 
             let tdNoticeTitle = document.createElement('td');
             tdNoticeTitle.style.width = '30%';
-            tdNoticeTitle.className = 'align-left';
+            tdNoticeTitle.className = 'align-left underline';
             let aNoticeTitle = document.createElement('a');
             if (document.getElementsByName('isRole')[0].value === 'true') {
                 aNoticeTitle.href = '/notices/'+ data.noticeNo +'/edit';
