--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -154,7 +154,7 @@
 
             let tdNoticeTitle = document.createElement('td');
             tdNoticeTitle.style.width = '75%';
-            tdNoticeTitle.className = 'align-left';
+            tdNoticeTitle.className = 'align-left underline';
             let aNoticeTitle = document.createElement('a');
             aNoticeTitle.href = '/portals/notices/'+ data.noticeNo +'/view';
             aNoticeTitle.innerText = data.noticeTitle;
