--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -24,7 +24,7 @@
             <tr class="flex-row align-items-center" th:each="download : ${downloadList}">
                 <td style="width:5%;" class="align-left" th:text="|${download.downloadSeq}|"></td>
                 <td style="width:10%;" class="align-left" th:text="#{${download.downloadCategory}}"></td>
-                <td style="width:45%;" class="align-left">
+                <td style="width:45%;" class="align-left underline">
                     <a sec:authorize="!hasAuthority('download.update')" th:text="${download.downloadTitle}"
                        th:href="@{/downloads/{id}/view(id=${download.downloadId})}">
                     </a>
