--- a/src/main/resources/public/template/faq/faqList.html
+++ b/src/main/resources/public/template/faq/faqList.html
@@ -19,7 +19,7 @@
             </tr>
             <tr class="flex-row align-items-center" th:each="faq : ${faqs}">
                 <td style="width:20%;" class="align-left" th:text="#{|common.code.${faq.faqGroup}|}"></td>
-                <td style="width:80%;" class="align-left">
+                <td style="width:80%;" class="align-left underline">
                     <a sec:authorize="hasAuthority('faq.update')" th:text="${faq.faqTitle}"
                        th:href="@{/faqs/{faqId}/edit(faqId=${faq.faqId})}"></a>
                     <a sec:authorize="!hasAuthority('faq.update')" th:text="${faq.faqTitle}"
