--- a/src/main/resources/public/template/portal/download/downloadList.html
+++ b/src/main/resources/public/template/portal/download/downloadList.html
@@ -21,7 +21,7 @@
     <tr th:each="download : ${downloadList}">
         <td style="width:5%;" class="align-center" th:text="|${download.downloadSeq}|"></td>
         <td style="width:10%;" class="align-center" th:text="#{${download.downloadCategory}}"></td>
-        <td style="width:45%;" class="align-left">
+        <td style="width:45%;" class="align-left underline">
             <a th:text="${download.downloadTitle}"
                th:href="@{/portals/downloads/{id}/view(id=${download.downloadId})}">
             </a>
