--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -438,7 +438,7 @@
 
             // TODO: 권한에 따라 view or edit
             let tdProcessName = document.createElement('td');
-            tdProcessName.className = 'align-left';
+            tdProcessName.className = 'align-left underline';
             tdProcessName.style.width = '20%';
             let processNameObject;
             if (data.enabled == true) {
