--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -120,7 +120,7 @@
             tdAvatar.appendChild(avatarImage);
 
             let tdName = document.createElement('td');
-            tdName.className = 'align-left';
+            tdName.className = 'align-left underline';
             tdName.style.width = '9.8%';
             let aName = document.createElement('a');
             aName.href = '/users/' + data.userKey + '/edit';
@@ -130,10 +130,7 @@
             let tdId = document.createElement('td');
             tdId.className = 'align-left';
             tdId.style.width = '10%';
-            let aId = document.createElement('a');
-            aId.href = '/users/' + data.userKey + '/edit';
-            aId.innerText = data.userName;
-            tdId.appendChild(aId);
+            tdId.innerText = data.userName;
 
             let tdEmail = document.createElement('td');
             tdEmail.className = 'align-left';
