#9699 [단위 테스트 - 문서함] 관련문서 주요내용이 나오지 않는다. 1. 연관된 문서 조회시 조회조건이 누락된 오류 수정 2. 연관된 문서 topic 출력 추가

--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -184,9 +184,15 @@
                 &-topic {
                   height: 100%;
                   color: $dark-gray;
+                  h5 {
+                    font-weight: $font-weight-regular;
+                  }
                 }
                 &-info {
-                  h5 { color: $dark-gray; }
+                  h5 {
+                    color: $dark-gray;
+                    font-weight: $font-weight-regular
+                  }
                 }
               }
             }
