--- a/src/main/resources/public/template/token/tokenEditTab.html
+++ b/src/main/resources/public/template/token/tokenEditTab.html
@@ -48,7 +48,7 @@
                     </button>
                 </div>
                 <div class="document-row-topic">
-                    <!--                            <h4 th:each="topic: ${rInstance.topics}" th:text="${topic}"></h4>-->
+                    <h5 th:each="topic: ${rInstance.topics}" th:text="${topic}"></h5>
                 </div>
                 <div class="document-row-info flex-row align-items-center">
                     <div class="document-user flex-row align-items-center">
