#9720 [단위 테스트 - 업무흐름] 임시 > 사용 상태로 변경 시, 취소 버튼을 클릭해도 신청서 상태가 변경된다.
* "상태를 사용으로 변경 하시겠습니까? 임시 상태로 작성된 문서 모두 삭제 됩니다."으로 메시지 변경
* saveDocument 함수에서 취소 함수를 null로 변경.

--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -119,17 +119,13 @@
 
                 if (document.getElementById('prev-document-status').value === STATUS_TEMPORARY && documentInfo.documentStatus === STATUS_USE) { // 수정
                     aliceJs.confirmIcon(
-                        i18n.msg('document.msg.confirmDeleteInstance'),
+                        i18n.msg('document.msg.changeStatusEnabled'),
                         () => restSubmit(method, url + '?isDeleteData=true', documentInfo, function(result) {
                             aliceJs.alertSuccess(i18n.msg('common.msg.save'), function() {
                                 location.reload();
                             });
                         }),
-                        () => restSubmit(method, url, documentInfo, function(result) {
-                            aliceJs.alertSuccess(i18n.msg('common.msg.save'), function() {
-                                location.reload();
-                            });
-                        })
+                        null
                     );
                 } else {
                     restSubmit(method, url, documentInfo, function(result) {
