--- a/src/main/resources/public/template/token/tokenEditTab.html
+++ b/src/main/resources/public/template/token/tokenEditTab.html
@@ -16,17 +16,17 @@
         <table class="table table-hover">
             <thead>
             <tr>
-                <th width="45%" th:text="#{token.label.startDt}">시작일시</th>
-                <th width="40%" th:text="#{token.label.elementName}">업무</th>
-                <th width="15%" th:text="#{token.label.assignee}">담당자</th>
+                <th width="35%" class="align-center" th:text="#{token.label.startDt}">시작일시</th>
+                <th width="50%" class="align-center" th:text="#{token.label.elementName}">업무</th>
+                <th width="15%" class="align-center" th:text="#{token.label.assignee}">담당자</th>
             </tr>
             </thead>
             <tbody id="history" class="list-wrap">
             <tr th:each="tokenHistory : ${instanceHistory}">
-                <td width="45%" class="user-date-time" th:name="tokenDt"
+                <td width="35%" class="user-date-time align-center" th:name="tokenDt"
                     th:text="${tokenHistory.tokenStartDt}"/>
-                <td width="40%" th:text="${tokenHistory.elementName}"></td>
-                <td width="15%" th:text="${tokenHistory.assigneeName}"></td>
+                <td width="50%" class="align-left" th:text="${tokenHistory.elementName}"></td>
+                <td width="15%" class="align-center" th:text="${tokenHistory.assigneeName}"></td>
             </tr>
             </tbody>
         </table>
