--- a/src/main/resources/public/template/certification/emailTemplate.html
+++ b/src/main/resources/public/template/certification/emailTemplate.html
@@ -2,11 +2,46 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<style>
+		.email-template {
+			width: 1920px;
+			height: 947px;
+			display: flex;
+			flex-direction: row;
+		}
+		.email-contents {
+			margin: 290px 0 0 100px;
+		}
+		.intro {
+			margin: 20px 0;
+			font-family: inherit;
+			font-size: 36px;
+			font-weight: bold;
+		}
+		.message {
+			font-family: inherit;
+			font-size: 24px;
+		}
+		.btn-certificate {
+			display: inline-block;
+			padding: 8px 25px;
+			margin-top: 80px;
+			font-size:16px;
+			color: #ffffff;
+			background-color: #33ADFF;
+			border-color:transparent;
+			border-radius: 3px;
+		}
+	</style>
 </head>
 <body>
-<p th:text="${intro}"></p>
-<pre th:text="${message}"></pre>
-<a th:href="${link}" th:text="${text}"></a>
-<p th:text="${regards}"></p>
+	<div class="email-template">
+	    <img src="cid:logo" width="962" height="947" alt="emailCertificate" border="0">
+	    <div class="email-contents">
+	        <pre class="intro" th:text="${intro}"></pre>
+	        <pre class=""message th:text="${message}"></pre>
+	        <button th:href="${link}" th:text="${text}"></button>
+	    </div>
+	</div>
 </body>
 </html>
