--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -67,7 +67,8 @@
                         </label>
                         <input type="text" id="email" name="email" maxlength="100" required="required">
                         <label th:text="#{user.label.mobileNumber}"></label>
-                        <input type="text" id="mobileNumber" name="mobileNumber" maxlength="100">
+                        <input id="mobileNumber" name="mobileNumber" maxlength="100"
+                               onkeydown="return onlyNumber(event)" onkeyup="removeChar(event)">
                         <label th:text="#{user.label.avatar}"></label>
                         <div class="flex-column avatar-edit">
                             <div class="avatar-sm">
@@ -126,6 +127,24 @@
             }
         });
     };
+
+    function onlyNumber(event) {
+        event = event || window.event;
+        const keyID = (event.which) ? event.which : event.keyCode;
+        if (!((keyID >= 48 && keyID <= 57) || (keyID >= 96 && keyID <= 105)
+            || keyID === 8 || keyID === 9 || keyID === 46 || keyID === 37 || keyID === 39)) {
+            return false;
+        }
+    }
+
+    function removeChar(event) {
+        event = event || window.event;
+        const keyID = (event.which) ? event.which : event.keyCode;
+        if (!(keyID === 8 || keyID === 9 || keyID === 46 || keyID === 37 || keyID === 39)) {
+            event.target.value = event.target.value.replace(/[^0-9]/g, '');
+        }
+    }
+
     const STATUS_SUCCESS = '0';
     const STATUS_ERROR_USER_ID_DUPLICATION = '1';
     const STATUS_ERROR_EMAIL_DUPLICATION = '3';
