--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -79,6 +79,7 @@
 @mixin cardTemplate() {
   .card-list {
     flex-wrap: wrap;
+    padding-bottom: 0.625rem; // 10px
 
     .card {
       position: relative;
@@ -92,6 +93,12 @@
       cursor: pointer;
       // 마우스 오버시
       &:hover { box-shadow: $card-hover-box-shadow; }
+
+      .document-column {
+        h3 {
+          width: 28rem; // 448px
+        }
+      }
     }
     // 데이터 없을 때
     .no-data-found {
