#9736 회원 가입시 메일인증 디자인 적용
- MR feedback

--- a/src/main/resources/public/template/certification/emailTemplate.html
+++ b/src/main/resources/public/template/certification/emailTemplate.html
@@ -29,7 +29,7 @@
 			font-size: 1rem;
 			text-decoration: none;
             color: #ffffff !important;
-			background-color: #33ADFF;
+			background-color: #0098FF;
 			border-color:transparent;
 			border-radius: 0.1875rem;
 		}
